Remove unused constants and messages in Talk3270 header and message files checked both talk3270.jss and talk3270exitbns.jss files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,7 @@
     "*.jss": "javascript",
     "*.jsm": "javascript",
     "*.jsh": "javascript"
-  }
+  },
+  "javascript.validate.enable": false,
+  "java.enabled": false
 }
